--- a/main.html
+++ b/main.html
@@ -1,14 +1,18 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="index.js"></script>
+  <!-- <script type="text/javascript" src="./lib/question.js"></script> -->
+  <script type="text/javascript" src="./lib/picture.js"></script>
+  <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script><script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
   <title>Document</title>
 </head>
+
 <body>
   <div class="box">
     <div class="box__box">
@@ -25,6 +29,10 @@
         </div>
       </div>
       <div class="questions">
+        <div id="questionSex" class="question">Q1: 성별
+          <button class="question__button" onclick="questionSex(0)" type="button">남자</button>
+          <button class="question__button" onclick="questionSex(1)" type="button">여자</button>
+        </div>
         <div id="question1" class="question">Q1: 손님
           <button class="question__button" onclick="question(1, 0, 1)" type="button">집으로 들어가 숨기</button>
           <button class="question__button" onclick="question(1, 0, 0)" type="button">발발거리며 맞이</button>
@@ -75,10 +83,30 @@
         </div>
       </div>
       <div class="picture">
-        <div id="picture__test" class="picture__test">asdfasd</div>
+        <button type="button" onclick="init()">Start</button>
+        <div class="file-upload">
+          <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Add Image</button>
+
+          <div class="image-upload-wrap">
+            <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
+            <div class="drag-text">
+              <h3>Drag and drop a file or select add Image</h3>
+            </div>
+          </div>
+          <div class="file-upload-content">
+            <img class="file-upload-image" id="face-image" src="#" alt="your image" />
+            <div class="image-title-wrap">
+            </div>
+          </div>
+        </div>
+        <div id="webcam-container"></div>
+        <div id="label-container"></div>
+      </div>
+      <div class="process">
+        processing...
       </div>
       <div class="result">
-
+        
       </div>
     </div>
     <div class="logo">
@@ -86,4 +114,12 @@
     </div>
   </div>
 </body>
+<!-- Copyright (c) 2021 by Aaron Vanston (https://codepen.io/aaronvanston/pen/yNYOXR)
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. -->
+
 </html>
