Style: Finish styling

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
           </div>
         </div>
         <div id="question1" class="question">
-          <div class="question__title"><mark>낯선 손님이 집에 놀러왔다.<br>당신은?</mark></div>
+          <div class="question__page">1/12</div>
+          <div class="question__title"><mark>낯선 손님이 집에 놀러왔다.<br><b>당신은?</b></mark></div>
           <div class="question__container">
             <a class="question__button" onclick="question(1, 0, 1)">일단 집으로<br>들어가 숨는다</a>
           </div>
@@ -69,7 +70,8 @@
           </div>
         </div>
         <div id="question2" class="question">
-          <div class="question__title"><mark>산책을 하다가 갱얼쥐 친구를 만났다.<br>당신은?</mark></div>
+          <div class="question__page">2/12</div>
+          <div class="question__title"><mark>산책을 하다가 갱얼쥐 친구를 만났다.<br><b>당신은?</b></mark></div>
           <div class="question__container">
             <a class="question__button" onclick="question(2, 0, 1)">킁킁거리며 천천히<br>탐색전을 벌인다</a>
           </div>
@@ -78,16 +80,18 @@
           </div>
         </div>
         <div id="question3" class="question">
-          <div class="question__title"><mark>주인이 조용히 자기만의 시간을 즐기고 있다.<br>당신은?</mark></div>
+          <div class="question__page">3/12</div>
+          <div class="question__title"><mark>주인이 조용히 자기만의 시간을 즐기고 있다.<br><b>당신은?</b></mark></div>
           <div class="question__container">
             <a class="question__button" onclick="question(3, 0, 1)">주인 옆에 벌러덩 누워<br>나만의 시간을 즐긴다</a>
           </div>
           <div class="question__container">
-            <a class="question__button" onclick="question(3, 0, 0)">장난감을 물고 초롱초롱하게<br>주인을 쳐다본다</a>
+            <a class="question__button" onclick="question(3, 0, 0)">장난감을 물고 초롱초롱<br>주인을 쳐다본다</a>
           </div>
         </div>
         <div id="question4" class="question">
-          <div class="question__title"><mark>나른한 오후를 지나고 나가는 산책.<br>당신은?</mark></div>
+          <div class="question__page">4/12</div>
+          <div class="question__title"><mark>나른한 오후를 지나고 나가는 산책.<br><b>당신은?</b></mark></div>
           <div class="question__container">
             <a class="question__button" onclick="question(4, 1, 1)">상쾌한 공기를 즐기며<br>바깥향기를 음미한다</a>
           </div>
@@ -96,7 +100,8 @@
           </div>
         </div>
         <div id="question5" class="question">
-          <div class="question__title"><mark>차를 타고 한참을 가서 낯선 장소에 도착했다.<br>당신은?</mark></div>
+          <div class="question__page">5/12</div>
+          <div class="question__title"><mark>차를 타고 한참을 가서 낯선 장소에 도착했다.<br><b>당신은?</b></mark></div>
           <div class="question__container">
             <a class="question__button" onclick="question(5, 1, 1)">무서워서 한발한발<br>조심히 내딛는다</a>
           </div>
@@ -105,7 +110,8 @@
           </div>
         </div>
         <div id="question6" class="question">
-          <div class="question__title"><mark>주인이 한번도 먹어보지 못한 간식을 준다.<br>당신은?</mark></div>
+          <div class="question__page">6/12</div>
+          <div class="question__title"><mark>주인이 한번도 먹어보지 못한 간식을 준다.<br><b>당신은?</b></mark></div>
           <div class="question__container">
             <a class="question__button" onclick="question(6, 1, 1)">집으로 가져와서 먹어도<br>괜찮은지 확인한다</a>
           </div>
@@ -114,7 +120,8 @@
           </div>
         </div>
         <div id="question7" class="question">
-          <div class="question__title"><mark>주인이 간식도 없이 앉으라고 한다.<br>당신은?</mark></div>
+          <div class="question__page">7/12</div>
+          <div class="question__title"><mark>주인이 간식도 없이 앉으라고 한다.<br><b>당신은?</b></mark></div>
           <div class="question__container">
             <a class="question__button" onclick="question(7, 2, 1)">간식이 없으면<br>눈길도 주지 않는다</a>
           </div>
@@ -123,7 +130,8 @@
           </div>
         </div>
         <div id="question8" class="question">
-          <div class="question__title"><mark>주인이 별것 아닌것 같은 일로 혼을 낸다.<br>당신은?</mark></div>
+          <div class="question__page">8/12</div>
+          <div class="question__title"><mark>주인이 별것 아닌것 같은 일로 혼을 낸다.<br><b>당신은?</b></mark></div>
           <div class="question__container">
             <a class="question__button" onclick="question(8, 2, 1)">내가 맞다면서<br>왈왈 짖는다</a>
           </div>
@@ -132,7 +140,8 @@
           </div>
         </div>
         <div id="question9" class="question">
-          <div class="question__title"><mark>주인이 어제 고백했다 차였다.<br>당신은?</mark></div>
+          <div class="question__page">9/12</div>
+          <div class="question__title"><mark>주인이 어제 고백했다 차였다.<br><b>당신은?</b></mark></div>
           <div class="question__container">
             <a class="question__button" onclick="question(9, 2, 1)">조용히 주인옆에서<br>괜찮다고 위로한다</a>
           </div>
@@ -141,7 +150,8 @@
           </div>
         </div>
         <div id="question10" class="question">
-          <div class="question__title"><mark>나른한 주말 아침, 주인이 일어나질 않는다.<br>당신은?</mark></div>
+          <div class="question__page">10/12</div>
+          <div class="question__title"><mark>나른한 주말 아침, 주인이 일어나질 않는다.<br><b>당신은?</b></mark></div>
           <div class="question__container">
             <a class="question__button" onclick="question(10, 3, 1)">주인 얼굴을 핥으며<br>일어나라고한다</a>
           </div>
@@ -150,59 +160,70 @@
           </div>
         </div>
         <div id="question11" class="question">
-          <div class="question__title"><mark>배변활동은 강아지에게 필수적이다.<br>당신은?</mark></div>
+          <div class="question__page">11/12</div>
+          <div class="question__title"><mark>배변활동은 강아지에게 필수적이다.<br><b>당신은?</b></mark></div>
           <div class="question__container">
-            <a class="question__button" onclick="question(11, 3, 1)">매일 정해진 시간에 산책가 배변한다</a>
+            <a class="question__button" onclick="question(11, 3, 1)">매일 정해진 시간에<br>밖에서 배변한다</a>
           </div>
           <div class="question__container">
-            <a class="question__button" onclick="question(11, 3, 0)">아무때나 마려울때 패드에 배변한다</a>
+            <a class="question__button" onclick="question(11, 3, 0)">아무때나 마려울때<br>패드에 배변한다</a>
           </div>
         </div>
         <div id="question12" class="question">
-          <div class="question__title"><mark>주인과 신나게 한바탕 뛰놀았다.<br>당신은?</mark></div>
+          <div class="question__page">12/12</div>
+          <div class="question__title"><mark>주인과 신나게 한바탕 뛰놀았다.<br><b>당신은?</b></mark></div>
           <div class="question__container">
-            <a class="question__button" onclick="question(12, 3, 1)">흩어져있는 장난감을 내집으로 가져온다</a>
+            <a class="question__button" onclick="question(12, 3, 1)">흩어져있는 장난감을<br>내 집으로 가져온다</a>
           </div>
           <div class="question__container">
-            <a class="question__button" onclick="question(12, 3, 0)">그냥 흩어져 있는대로 놔둔다</a>
+            <a class="question__button" onclick="question(12, 3, 0)">그냥 흩어져<br>있는대로 놔둔다</a>
           </div>
         </div>
       </div>
       <div class="picture">
-        <div class="question__title"><mark>당신의 사진은?</mark></div>
-        <div class="file-upload">
-          <div class="image-upload-wrap">
-            <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
+        <div class="picture__title"><mark>당신의 사진은?</mark></div>
+        <div class="picture__upload">
+          <div class="picture__upload--wrap">
+            <input class="picture__upload--input" type='file' onchange="readURL(this);" accept="image/*" />
           </div>
-          <div class="file-upload-content">
-            <img class="file-upload-image" id="face-image" src="#" alt="your image" />
-            <div class="image-title-wrap">
+          <div class="picture__upload--content">
+            <img class="picture__upload--image" id="face-image" src="#" alt="your image" />
+            <div class="picture__wrap">
             </div>
           </div>
         </div>
         <div class="picture__container">
-          <a class="picture__button" type="button" onclick="$('.file-upload-input').trigger( 'click' )">사진 첨부</a>
+          <a class="picture__button" type="button" onclick="$('.picture__upload--input').trigger( 'click' )">사진 첨부</a>
         </div>
         <div class="picture__container">
           <a class="picture__button" onclick="init()">결과 보기</a>
         </div>
       </div>
       <div class="process">
-        <div class="loading">
+        <div class="process__loading">
           <div>
-            <div class="c1"></div>
-            <div class="c2"></div>
-            <div class="c3"></div>
-            <div class="c4"></div>
+            <div class="process__object--1"></div>
+            <div class="process__object--2"></div>
+            <div class="process__object--3"></div>
+            <div class="process__object--4"></div>
           </div>
         </div>
       </div>
       <div class="result">
-
+        <div class="result__title"></div>
+        <div class="result__image"></div>
+        <div class="result__textbox">
+          <div class="result__text">
+            어쩌고저쩌고어쩌고저쩌어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고
+          </div>
+        </div>
+        <div class="result__container">
+          <a class="result__button" type="button" onclick="location.reload()">다시하기</a>
+        </div>
       </div>
-    </div>
-    <div class="logo">
-      <a href="https://iamdooddi.tistory.com/" target="_blank"><img src="./img/main__logo.png" alt="main__logo"></a>
+      <div class="logo">
+        <a href="https://iamdooddi.tistory.com/" target="_blank"><img src="./img/main__logo.png" alt="main__logo"></a>
+      </div>
     </div>
   </div>
 </body>
