--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="./img/favicon.ico">
+  <link rel="shortcut icon" href="./img/favicon.ico">
+  <meta property="og:image" content="카톡이미지">
+  <meta property="og:title" content="견생테스트: 나는 어떤 강아지일까?">
+  <meta property="og:description" content="MBTI와 얼굴로 알아보는 견생테스트">
   <link rel="stylesheet" href="style.css">
-  <!-- <script type="text/javascript" src="./lib/question.js"></script> -->
   <script type="text/javascript" src="./lib/picture.js"></script>
   <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
-  <title>Document</title>
+  <title>견생테스트: 나는 어떤 강아지일까?</title>
 </head>
 
 <body>
