Chore: Add missing kakao image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="./img/favicon.ico">
   <link rel="shortcut icon" href="./img/favicon.ico">
-  <meta property="og:image" content="카톡이미지">
+  <meta property="og:image" content="./img/kakao.png">
   <meta property="og:title" content="견생테스트: 나는 어떤 강아지일까?">
   <meta property="og:description" content="MBTI와 얼굴로 알아보는 견생테스트">
   <link rel="stylesheet" href="style.css">
