Test: Test final

--- a/index.html
+++ b/index.html
@@ -224,8 +224,11 @@
         <div class="result__container">
           <a class="result__button" type="button" onclick="location.reload()">다시하기</a>
         </div>
+        <div class="result__logo">
+          <a href="https://iamdooddi.tistory.com/" target="_blank"><img src="./img/main__logo.png" alt="main__logo"></a>
+        </div>
       </div>
-      <div class="logo">
+      <div class="box__logo">
         <a href="https://iamdooddi.tistory.com/" target="_blank"><img src="./img/main__logo.png" alt="main__logo"></a>
       </div>
     </div>
