Chore: Add setTimeout for button animation

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           </div>
         </div>
         <div class="result__container">
-          <a class="result__button" type="button" onclick="location.reload()">다시하기</a>
+          <a class="result__button" type="button" onclick="setTimeout(function(){location.reload()}, 300)">다시하기</a>
         </div>
         <div class="result__logo">
           <a href="https://iamdooddi.tistory.com/" target="_blank"><img src="./img/main__logo.png" alt="main__logo"></a>
