Add: Add picture upload notification

--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@
             <div class="picture__wrap">
             </div>
           </div>
+          <div class="picture__upload--text">
+            <span>사진을 올려주세요!</span>
+          </div>
         </div>
         <div class="picture__container">
           <a class="picture__button" type="button" onclick="$('.picture__upload--input').trigger( 'click' )">사진 첨부</a>
