--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     gtag('config', 'G-70R9RF4RBM');
   </script>
-  <!-- Go to www.addthis.com/dashboard to customize your tools -->
-  <script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6004f93c009e68ee"></script>
+  <!-- 애드디스 (SNS 공유) -->
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6004f93c009e68ee"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -240,6 +240,11 @@
       </div>
     </div>
   </div>
+  <ins class="kakao_ad_area" style="display:none;"
+   data-ad-unit    = "DAN-uMzDOEIUXXGzn4Ey"
+   data-ad-width   = "320"
+   data-ad-height  = "100"></ins>
+  <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 </body>
 <!-- Copyright (c) 2021 by Aaron Vanston (https://codepen.io/aaronvanston/pen/yNYOXR)
 
