--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
    data-ad-unit    = "DAN-uMzDOEIUXXGzn4Ey"
    data-ad-width   = "320"
    data-ad-height  = "100"></ins>
-  <script type="text/javascript" src="https://t1.daumcdn.net/kas/static/ba.min.js" async></script>
+  <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 </body>
 <!-- Copyright (c) 2021 by Aaron Vanston (https://codepen.io/aaronvanston/pen/yNYOXR)
 
