--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <meta property="og:title" content="견생테스트: 나는 어떤 강아지일까?">
   <meta property="og:description" content="MBTI와 얼굴로 알아보는 견생테스트">
   <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="./lib/picture.js"></script>
+  <script type="text/javascript" src="./lib/index.js"></script>
   <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
@@ -218,11 +218,22 @@
       </div>
     </div>
     <div class="result">
-      <div class="result__title"></div>
+      <!-- <div class="result__title"></div> -->
       <div class="result__image"></div>
       <div class="result__textbox">
+        <div class='result__text--header'>조용하고 헌신적인 </div>
         <div class="result__text">
           어쩌고저쩌고어쩌고저쩌어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고
+        </div>
+      </div>
+      <div class="result__compare">
+        <div class="result__compare--box">
+          <div class="result__image--small"></div>
+          <div class="result__image--text"></div>
+        </div>
+        <div class="result__compare--box">
+          <div class="result__image--small"></div>
+          <div class="result__image--text"></div>
         </div>
       </div>
       <!-- Go to www.addthis.com/dashboard to customize your tools -->
